--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "test",
+  "name": "skillbox_webpack-kurs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "dev": "webpack serve"
+    "dev": "cross-env NODE_ENV=development webpack serve --mode development",
+    "build": "cross-env NODE_ENV=production webpack --mode production"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vladislav",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.21.4",
@@ -17,12 +16,15 @@
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
     "image-minimizer-webpack-plugin": "^3.8.2",
     "imagemin": "^8.0.1",
+    "mini-css-extract-plugin": "^2.7.5",
     "node-dir": "^0.1.17",
     "style-loader": "^3.3.2",
+    "svgo": "^3.0.2",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.3"
