--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack serve --mode development",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
     "build": "cross-env NODE_ENV=production webpack --mode production"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "html-webpack-plugin": "^5.5.1",
     "image-minimizer-webpack-plugin": "^3.8.2",
     "imagemin": "^8.0.1",
+    "imagemin-svgo": "^10.0.1",
     "mini-css-extract-plugin": "^2.7.5",
     "node-dir": "^0.1.17",
     "style-loader": "^3.3.2",
