--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
-    "build": "cross-env NODE_ENV=production webpack --mode production"
+    "build": "cross-env NODE_ENV=production webpack --mode production",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Vladislav",
@@ -13,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
+    "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -22,6 +24,7 @@
     "image-minimizer-webpack-plugin": "^3.8.2",
     "imagemin": "^8.0.1",
     "imagemin-svgo": "^10.0.1",
+    "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.5",
     "node-dir": "^0.1.17",
     "style-loader": "^3.3.2",
