--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@types/jest": "^29.5.1",
     "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
