--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
+    "eslint-plugin-jest": "^27.2.1",
     "html-webpack-plugin": "^5.5.1",
     "image-minimizer-webpack-plugin": "^3.8.2",
     "imagemin": "^8.0.1",
     "imagemin-svgo": "^10.0.1",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.5",
     "node-dir": "^0.1.17",
     "style-loader": "^3.3.2",
